// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update adds TODO comment for dynamic [tuiTextfieldLabelOutside]: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time
                    formControlName="value"
                    [tuiTextfieldLabelOutside]="isLabelOutside"
                >
                    Choose a date
                </tui-input-date-time>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) [tuiTextfieldLabelOutside] is dynamic — cannot be migrated automatically. Use <label tuiLabel> inside <tui-textfield> for label-outside pattern.
-->
<tui-textfield
                    
                    
                >
                    Choose a date
                
<input tuiInputDateTime formControlName="value" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputDateTimeModule to TuiInputDateTime: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time></tui-input-date-time>

                <tui-input-date-time
                    [formControl]="control"
                    [tuiTextfieldCleaner]="true"
                >
                    Choose a date
                    <input tuiTextfieldLegacy />
                </tui-input-date-time>

                <tui-input-date-time formControlName="date">
                    Pick date
                </tui-input-date-time>

                <tui-input-date-time [(ngModel)]="value">Date</tui-input-date-time>
            ",
  "1. After": "
                <tui-textfield>
<input tuiInputDateTime />
<tui-calendar *tuiDropdown />
</tui-textfield>

                <tui-textfield
                    
                    [tuiTextfieldCleaner]="true"
                >
<label tuiLabel>
                    Choose a date
                    </label>
<input tuiInputDateTime [formControl]="control" />
                
<tui-calendar *tuiDropdown />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>
                    Pick date
                </label>

<input tuiInputDateTime formControlName="date" />
<tui-calendar *tuiDropdown />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>Date</label>

<input tuiInputDateTime [(ngModel)]="value" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputDateTimeModule to TuiInputDateTime: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputDateTimeModule} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    imports: [TuiInputDateTimeModule],
                    templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
  "1. After": "import { TuiInputDateTime } from "@taiga-ui/kit";

                                @Component({
                    standalone: true,
                    imports: [TuiInputDateTime],
                    templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
}
`;

exports[`ng-update moves [min], [max] and [timeMode] to <input tuiInputDateTime>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time
                    formControlName="date"
                    timeMode="HH:MM:SS"
                    [max]="maxDate"
                    [min]="minDate"
                >
                    Date
                </tui-input-date-time>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    
                    
                >
<label tuiLabel>
                    Date
                </label>

<input tuiInputDateTime formControlName="date" timeMode="HH:MM:SS" [max]="maxDate" [min]="minDate" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update preserves camelCase for (ngModelChange) and [formControlName] bindings: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time
                    [formControlName]="control"
                    (ngModelChange)="onChange($event)"
                >
                    Choose a date
                </tui-input-date-time>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<label tuiLabel>
                    Choose a date
                </label>

<input tuiInputDateTime [formControlName]="control" (ngModelChange)="onChange($event)" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update renames [defaultActiveYearMonth] to [month] on <tui-calendar> and keeps [disabledItemHandler] on <tui-textfield>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time
                    formControlName="date"
                    [defaultActiveYearMonth]="initialMonth"
                    [disabledItemHandler]="disabledHandler"
                >
                    Date
                </tui-input-date-time>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    [disabledItemHandler]="disabledHandler"
                >
<label tuiLabel>
                    Date
                </label>

<input tuiInputDateTime formControlName="date" />
<tui-calendar *tuiDropdown [month]="initialMonth" />
</tui-textfield>
            ",
}
`;

exports[`ng-update reuses an existing legacy <input> child instead of creating a new one: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time [(ngModel)]="value">
                    Choose a date
                    <input tuiTextfieldLegacy />
                </tui-input-date-time>
            ",
  "1. After": "
                <tui-textfield >
<label tuiLabel>
                    Choose a date
                    </label>
<input tuiInputDateTime [(ngModel)]="value" />
                
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update uses placeholder when [tuiTextfieldLabelOutside] is true: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-time
                    [formControl]="control"
                    [tuiTextfieldLabelOutside]="true"
                >
                    Choose a date
                </tui-input-date-time>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<input tuiInputDateTime [formControl]="control" placeholder="Choose a date" />
<tui-calendar *tuiDropdown />
</tui-textfield>
            ",
}
`;
